--- a/environment_raw.yml
+++ b/environment_raw.yml
@@ -223,149 +223,151 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
-      - absl-py
-      - accelerate
-      - aiofiles
-      - aiohttp
-      - aiosignal
-      - altair
-      - annotated-types
-      - antlr4-python3-runtime
-      - appdirs
-      - astunparse
-      - async-timeout
-      - bert-score
-      - bitsandbytes
-      - cachetools
-      - click
-      - colorama
-      - cvxpy
-      - cython
-      - dataclasses
-      - datasets
-      - debugpy-run
-      - dill
-      - docker-pycreds
-      - ecos
-      - entmax
-      - evaluate
-      - exceptiongroup
-      - fastapi
-      - fasttext
-      - ffmpy
-      - fire
-      - flatbuffers
-      - frozenlist
-      - fsspec
-      - gast
-      - gitdb
-      - gitpython
-      - google-auth
-      - google-auth-oauthlib
-      - google-pasta
-      - gradio
-      - gradio-client
-      - grpcio
-      - h11
-      - h5py
-      - httpcore
-      - httpx
-      - huggingface-hub
-      - hydra-core
-      - iso-639
-      - jsonargparse
-      - jsonschema
-      - jsonschema-specifications
-      - keras
-      - libclang
-      - lightning-utilities
-      - linkify-it-py
-      - lxml
-      - markdown
-      - markdown-it-py
-      - mdit-py-plugins
-      - mdurl
-      - mecab-python3
-      - mpmath
-      - multidict
-      - multiprocess
-      - mypy-extensions
-      - nltk
-      - nvidia-cublas-cu12
-      - nvidia-cuda-nvrtc-cu12
-      - nvidia-cuda-runtime-cu12
-      - nvidia-cudnn-cu12
-      - oauthlib
-      - omegaconf
-      - openai
-      - opt-einsum
-      - orjson
-      - osqp
-      - packaging
-      - pandas
-      - pathtools
-      - portalocker
-      - protobuf
-      - psutil
-      - ptvsd
-      - pyarrow
-      - pyasn1
-      - pyasn1-modules
-      - pybind11
-      - pydantic
-      - pydantic-core
-      - pydeprecate
-      - pydub
-      - pyqt5-sip
-      - pyre-extensions
-      - python-multipart
-      - pytorch-lightning
-      - pytz
-      - pyyaml
-      - qdldl
-      - referencing
-      - regex
-      - requests-oauthlib
-      - responses
-      - rouge-score
-      - rpds-py
-      - rsa
-      - sacrebleu
-      - sacremoses
-      - scs
-      - semantic-version
-      - sentencepiece
-      - sentry-sdk
-      - setproctitle
-      - smmap
-      - starlette
-      - tabulate
-      - tensorboard
-      - tensorboard-data-server
-      - tensorboardx
-      - tensorflow
-      - tensorflow-estimator
-      - tensorflow-io-gcs-filesystem
-      - tensorrt
-      - tensorrt-bindings
-      - termcolor
-      - tf-slim
-      - tokenizers
-      - toolz
-      - torchmetrics
-      - tqdm
-      - transformers
-      - typing-extensions
-      - typing-inspect
-      - tzdata
-      - uc-micro-py
-      - unbabel-comet
-      - uvicorn
-      - wandb
-      - websockets
-      - werkzeug
-      - wrapt
-      - xformers
-      - xxhash
-      - yarl
+      - absl-py==1.4.0
+      - accelerate==0.19.0
+      - aiofiles==23.2.0
+      - aiohttp==3.8.4
+      - aiosignal==1.3.1
+      - altair==5.0.1
+      - annotated-types==0.5.0
+      - antlr4-python3-runtime==4.9.3
+      - appdirs==1.4.4
+      - astunparse==1.6.3
+      - async-timeout==4.0.2
+      - bert-score==0.3.13
+      - bitsandbytes==0.39.0
+      - bleurt==0.0.2
+      - cachetools==5.3.1
+      - click==8.1.3
+      - colorama==0.4.6
+      - cvxpy==1.3.2
+      - cython==3.0.2
+      - dataclasses==0.6
+      - datasets==2.12.0
+      - debugpy-run==1.6
+      - dill==0.3.6
+      - docker-pycreds==0.4.0
+      - ecos==2.0.12
+      - entmax==1.1
+      - evaluate==0.4.0
+      - exceptiongroup==1.1.2
+      - fastapi==0.101.0
+      - fasttext==0.9.2
+      - ffmpy==0.3.1
+      - fire==0.5.0
+      - flatbuffers==23.5.26
+      - frozenlist==1.3.3
+      - fsspec==2023.5.0
+      - gast==0.4.0
+      - gitdb==4.0.10
+      - gitpython==3.1.31
+      - google-auth==2.23.0
+      - google-auth-oauthlib==1.0.0
+      - google-pasta==0.2.0
+      - gradio==3.39.0
+      - gradio-client==0.3.0
+      - grpcio==1.58.0
+      - h11==0.14.0
+      - h5py==3.9.0
+      - httpcore==0.17.3
+      - httpx==0.24.1
+      - huggingface-hub==0.16.4
+      - hydra-core==1.3.2
+      - iso-639==0.4.5
+      - jsonargparse==3.13.1
+      - jsonschema==4.19.0
+      - jsonschema-specifications==2023.7.1
+      - keras==2.13.1
+      - libclang==16.0.6
+      - lightning-utilities==0.8.0
+      - linkify-it-py==2.0.2
+      - lxml==4.9.2
+      - markdown==3.4.4
+      - markdown-it-py==2.2.0
+      - mdit-py-plugins==0.3.3
+      - mdurl==0.1.2
+      - mecab-python3==1.0.6
+      - mpmath==1.2.1
+      - multidict==6.0.4
+      - multiprocess==0.70.14
+      - mypy-extensions==1.0.0
+      - nltk==3.8.1
+      - nvidia-cublas-cu12==12.2.5.6
+      - nvidia-cuda-nvrtc-cu12==12.2.140
+      - nvidia-cuda-runtime-cu12==12.2.140
+      - nvidia-cudnn-cu12==8.9.4.25
+      - oauthlib==3.2.2
+      - omegaconf==2.3.0
+      - openai==0.27.7
+      - opt-einsum==3.3.0
+      - orjson==3.9.4
+      - osqp==0.6.3
+      - packaging==23.1
+      - pandas==1.5.3
+      - pathtools==0.1.2
+      - portalocker==2.7.0
+      - protobuf==3.20.3
+      - psutil==5.9.5
+      - ptvsd==4.3.2
+      - pyarrow==12.0.0
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
+      - pybind11==2.11.1
+      - pydantic==2.1.1
+      - pydantic-core==2.4.0
+      - pydeprecate==0.3.2
+      - pydub==0.25.1
+      - pyqt5-sip==12.11.0
+      - pyre-extensions==0.0.29
+      - python-multipart==0.0.6
+      - pytorch-lightning==1.9.5
+      - pytz==2023.3
+      - pyyaml==6.0
+      - qdldl==0.1.7.post0
+      - referencing==0.30.2
+      - regex==2023.5.5
+      - requests-oauthlib==1.3.1
+      - responses==0.18.0
+      - rouge-score==0.1.2
+      - rpds-py==0.9.2
+      - rsa==4.9
+      - sacrebleu==2.3.1
+      - sacremoses==0.0.53
+      - scs==3.2.3
+      - semantic-version==2.10.0
+      - sentencepiece==0.1.99
+      - sentry-sdk==1.24.0
+      - setproctitle==1.3.2
+      - smmap==5.0.0
+      - starlette==0.27.0
+      - tabulate==0.9.0
+      - tensorboard==2.13.0
+      - tensorboard-data-server==0.7.1
+      - tensorboardx==2.6
+      - tensorflow==2.13.0
+      - tensorflow-estimator==2.13.0
+      - tensorflow-io-gcs-filesystem==0.34.0
+      - tensorrt==8.6.1.post1
+      - tensorrt-bindings==8.6.1
+      - tensorrt-libs==8.6.1
+      - termcolor==2.3.0
+      - tf-slim==1.1.0
+      - tokenizers==0.13.3
+      - toolz==0.12.0
+      - torchmetrics==0.8.2
+      - tqdm==4.65.0
+      - transformers==4.29.0
+      - typing-extensions==4.7.1
+      - typing-inspect==0.9.0
+      - tzdata==2023.3
+      - uc-micro-py==1.0.2
+      - unbabel-comet==2.0.1
+      - uvicorn==0.23.2
+      - wandb==0.15.3
+      - websockets==11.0.3
+      - werkzeug==2.3.7
+      - wrapt==1.15.0
+      - xformers==0.0.20
+      - xxhash==3.2.0
+      - yarl==1.9.2
 prefix: /home/djh/miniconda3/xllm
