--- a/requirements20240325.txt
+++ b/requirements20240325.txt
@@ -264,6 +264,7 @@ typing-inspect==0.9.0
 tzdata==2024.1
 uc-micro-py==1.0.3
 unbabel-comet==2.2.2
+utils
 urllib3==1.26.15
 uvicorn==0.28.0
 wandb==0.16.4
